--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <body>
   <h2>Hello</h2>
+  <iframe width=560 height=315 src="http://qa1syndy.xidio.net/syndy.html?videoId=131774&autoPlay=true&utm_source=&iframeWidth=560&optionFileName=zentrick_option3.json" frameborder="0" allowfullscreen></iframe>
 <body>
