--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <body>
-  <h2>Hello
+  <h2>Hello</h2>
   <iframe width=560 height=315 src="https://qasyndyh2.xidio.net/syndy.html?videoId=131774&autoPlay=true&utm_source=&iframeWidth=560&optionFileName=zentrick_option1.json" frameborder="0" allowfullscreen></iframe>
-  </h2>
 <body>
