--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
   <h2>Hello</h2>
   
   <iframe width=560 height=315 src="https://qasyndyh2.xidio.net/syndy.html?showId=11602&autoPlay=true&utm_source=&iframeWidth=560&optionFileName=zentrick_option2.json" frameborder="0" allowfullscreen></iframe>
-  
+  <iframe width=560 height=315 src="http://qa1syndy.xidio.net/embed/dZfsKL" frameborder="0" allowfullscreen></iframe>
   
 <body>
